--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="ThreeSparks.js"></script>
     </head>
 <body>
+<center><a href="https://github.com/elephanter/sparks.js">Github</a></center>
     <script type="text/javascript">
         var camera, scene, renderer, geometry, material, mesh;
 
